--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Learning Style Identifier</h1>
-    <div id="questions"></div>
-    <button id="submit-btn">Submit Answers</button>
+  <header>
+    <h1>Discover Your Learning Style</h1>
+  </header>
+
+  <main>
+    <section id="questionsSection">
+      <!-- Questions will be dynamically loaded here -->
+    </section>
+    <button id="submitBtn">Submit Answers</button>
     <div id="result"></div>
-  </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
